@@ -76,9 +76,6 @@ item_check: no
 // On officials this is 0, but it's set to 100ms as a measure against bots/macros.
 item_use_interval: 100
 
-// The ghostring fix makes mob attacks not be affected by ghostring armor wearing players.
-mob_ghostring_fix: yes
-
 //Required level of bNoMagicDamage before Status Changes are blocked (Golden Thief Bug card).
 //For example, if left at 50. An item can give bNoMagicDamage,40;
 // which reduces magic damage by 40%, but does not blocks status changes.
